--- a/MachineLearning_PNL.ipynb
+++ b/MachineLearning_PNL.ipynb
@@ -42,7 +42,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# Explorando e vetorizando dados textuais"
+        "# <font color=blue>Explorando e vetorizando dados textuais</font>"
       ]
     },
     {
@@ -188,6 +188,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "00RE0O2hhd7B",
+        "colab_type": "text"
+      },
+      "source": [
+        "##<font color='red'>Quantidade de dados em cada categoria (positiva, negativa)</font>"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "LcshuYFOBZNX",
@@ -195,12 +205,20 @@
         "colab": {}
       },
       "source": [
-        "#Quantidade de dados em cada categoria (positiva, negativa)\n",
-        "\n",
         "print(resenha['classificacao'].value_counts)"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "rfEca52YhpcS",
+        "colab_type": "text"
+      },
+      "source": [
+        "##<font color='red'>Vetorizar o texto</font>"
+      ]
     },
     {
       "cell_type": "code",
@@ -210,8 +228,6 @@
         "colab": {}
       },
       "source": [
-        "#Vetorizar o texto\n",
-        "\n",
         "from sklearn.feature_extraction.text import CountVectorizer\n",
         "\n",
         "vetorizar = CountVectorizer(lowercase = False, max_features = 50)\n",
@@ -221,6 +237,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1aPUjs0IhvC4",
+        "colab_type": "text"
+      },
+      "source": [
+        "##<font color='red'>Extrair vocabulário</font>"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "pvGPLTdNBY7u",
@@ -228,8 +254,6 @@
         "colab": {}
       },
       "source": [
-        "#Extrair o vocabulário\n",
-        "\n",
         "vetorizar.get_feature_names()"
       ],
       "execution_count": 0,
@@ -273,7 +297,17 @@
         "colab_type": "text"
       },
       "source": [
-        "# Modelo - Treino, teste, predição, acurácia"
+        "#<font color='blue'>Modelo - Treino, teste, predição, acurácia</font>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3VuIAtP2g1-c",
+        "colab_type": "text"
+      },
+      "source": [
+        "## <font color=red>Divisão dos dados em treino e teste</font>"
       ]
     },
     {
@@ -284,14 +318,22 @@
         "colab": {}
       },
       "source": [
-        "#Divisão dos dados em treino e teste\n",
-        "\n",
         "from sklearn.model_selection import train_test_split\n",
         "\n",
         "treino, teste, classe_treino, classe_teste = train_test_split(bag_of_words, resenha['classificacao'], random_state = 42)\n"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "tZ84yUtYg7Uw",
+        "colab_type": "text"
+      },
+      "source": [
+        "## <font color=red>Treino do modelo e predição</font>"
+      ]
     },
     {
       "cell_type": "code",
@@ -301,8 +343,6 @@
         "colab": {}
       },
       "source": [
-        "#Treino do modelo e predição\n",
-        "\n",
         "from sklearn.linear_model import LogisticRegression\n",
         "\n",
         "regressao_logistica = LogisticRegression(solver = \"lbfgs\")\n",
@@ -313,6 +353,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "epRUqoiShBx6",
+        "colab_type": "text"
+      },
+      "source": [
+        "## <font color=red>Vetor de True e False</font>"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "jfVZZAP-tlAS",
@@ -320,8 +370,6 @@
         "colab": {}
       },
       "source": [
-        "#Vetor de True e False\n",
-        "\n",
         "previsao_teste_bol = previsao_teste[:, 1] >= 0.5"
       ],
       "execution_count": 0,
@@ -346,6 +394,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qMZpaLVBhMda",
+        "colab_type": "text"
+      },
+      "source": [
+        "## <font color=red>Acurácia do modelo</font>"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "77i7AdVpK-BL",
@@ -353,8 +411,6 @@
         "colab": {}
       },
       "source": [
-        "#Acurácia\n",
-        "\n",
         "from sklearn.metrics import accuracy_score\n",
         "\n",
         "acuracia_teste = accuracy_score(classe_teste, previsao_teste_int)"
@@ -369,7 +425,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# Visualização dos dados - para ter novos insights"
+        "# <font color=blue>Visualização dos dados - para ter novos insights</font>"
       ]
     },
     {
@@ -379,7 +435,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## Word Cloud"
+        "## <font color=red>Word Cloud</font>"
       ]
     },
     {
@@ -501,7 +557,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## NLTK"
+        "## <font color=red>NLTK</font>"
       ]
     },
     {
@@ -571,7 +627,17 @@
         "colab_type": "text"
       },
       "source": [
-        "# Limpeza dos dados"
+        "# <font color=blue>Limpeza dos dados</font>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zCVfJrFJgNvh",
+        "colab_type": "text"
+      },
+      "source": [
+        "## <font color=red>Tratamento 1 - Stopwords</font>"
       ]
     },
     {
@@ -582,8 +648,6 @@
         "colab": {}
       },
       "source": [
-        "#Tratamento 1 - Stopwords\n",
-        "\n",
         "palavras_irrelevantes = ntlkt.corpus.stopwords.words('portuguese')\n",
         "\n",
         "frase_processada\n",
@@ -729,6 +793,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "DGQKaYdkgG7B",
+        "colab_type": "text"
+      },
+      "source": [
+        "## <font color=red>Tratamento 2 - Retirar as pontuações</font>"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "WSnYZplgEk0U",
@@ -736,8 +810,6 @@
         "colab": {}
       },
       "source": [
-        "#Tratamento 2 - Retirar as pontuações\n",
-        "\n",
         "#Transformar cada pontuação em um elemento da lista\n",
         "#Retirar a pontuação - juntar a lista de pontuação à lista de palavras irrelevantes\n",
         "\n",
@@ -828,6 +900,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7CimlLKbf9D8",
+        "colab_type": "text"
+      },
+      "source": [
+        "## <font color=red>Tratamento 3 - Retirar os acentos</font>"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "ed-WBz005Mrp",
@@ -835,8 +917,6 @@
         "colab": {}
       },
       "source": [
-        "#Tratamento 3 - Retirar os acentos\n",
-        "\n",
         "import unidecode\n",
         "\n",
         "stopwords_sem_acento = [unicode.unicode(texto) for texto in resenha['tratamento_2']] "
@@ -884,6 +964,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XQEzvk4vf1XZ",
+        "colab_type": "text"
+      },
+      "source": [
+        "## <font color=red>Tratamento 4 - Transformar todos os caracteres em minúsculas</font>"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "zMuCnIHYCiE-",
@@ -891,8 +981,6 @@
         "colab": {}
       },
       "source": [
-        "#Tratamento 4 - Transformar todos os caracteres em minúsculas\n",
-        "\n",
         "frase_processada = list()\n",
         "\n",
         "for opiniao in resenha['tratamento_3']:\n",
@@ -964,6 +1052,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "PUs650bnfdc6",
+        "colab_type": "text"
+      },
+      "source": [
+        "## <font color=red>Tratamento 5 - Stemmer.stem - pega a raiz da palavra e retira os sufixos</font>"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "TlrfZP3iFtM_",
@@ -971,7 +1069,7 @@
         "colab": {}
       },
       "source": [
-        "#Tratamento 5 - Stemmer.stem - pega a raiz da palavra e retira os sufixos\n",
+        "\n",
         "\n",
         "frase_processada = list()\n",
         "for opiniao in resenha['tratamento_4']:\n",
@@ -1003,6 +1101,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "CyCP1JbHfYYO",
+        "colab_type": "text"
+      },
+      "source": [
+        "## <font color=red>TFIDF</font>"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "vn2SpgoZFtkA",
@@ -1010,8 +1118,6 @@
         "colab": {}
       },
       "source": [
-        "#TFIDF \n",
-        "\n",
         "from sklearn.feature_extraction.text import TfidfVectorizer\n",
         "\n",
         "tfidf_bruto = tfidf.fit_transform(resenha['text-pt'])\n",
@@ -1052,6 +1158,17 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "gax5EKo-fRFP",
+        "colab_type": "text"
+      },
+      "source": [
+        "## <font color=red>NGrams</font>\n",
+        "Como a Regressão logística classifica em positivo e negativo"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "klwzKKMQFtZ-",
@@ -1059,9 +1176,6 @@
         "colab": {}
       },
       "source": [
-        "#Ngrams\n",
-        "#Como a Regressão logística classifica em positivo e negativo\n",
-        "\n",
         "from nltk import ngrams\n",
         "\n",
         "tfidf = TfidfVectorizer(lowercase=False, ngram_range = (1, 2))\n",
@@ -1107,19 +1221,6 @@
         "# Verificar quais palavras tem maior peso negativo para o modelo\n",
         "\n",
         "pesos.nsmallest(10,0)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "ikezirV8Y6Kd",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
       ],
       "execution_count": 0,
       "outputs": []
