--- a/MachineLearning_PNL.ipynb
+++ b/MachineLearning_PNL.ipynb
@@ -63,11 +63,7 @@
       "metadata": {
         "id": "lJZjsaUxtk1Y",
         "colab_type": "code",
-        "outputId": "a8c75acc-7721-4bce-eaec-f70997536e83",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 129
-        }
+        "colab": {}
       },
       "source": [
         "uri = 'https://s3.amazonaws.com/sergio-prates-blog/imdb-reviews-pt-br.csv''\n",
@@ -75,45 +71,20 @@
         "resenha = pd.read_csv('uri)"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-bf1bacda536d>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    uri = 'https://s3.amazonaws.com/sergio-prates-blog/imdb-reviews-pt-br.csv''\u001b[0m\n\u001b[0m                                                                               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m EOL while scanning string literal\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "zo23fSTPtk8B",
         "colab_type": "code",
-        "outputId": "40c4e179-1bf2-4e05-ed68-60db679702ae",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 163
-        }
+        "colab": {}
       },
       "source": [
         "resenha.head()"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-3-d06935b93cea>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mresenha\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m: name 'resenha' is not defined"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
