--- a/MachineLearning_PNL.ipynb
+++ b/MachineLearning_PNL.ipynb
@@ -32,7 +32,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<font color=red size = 20px><b> Processamento de Linguagem Natural</b> </font>"
+        "# Processamento de Linguagem Natural"
       ]
     },
     {
@@ -42,7 +42,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# <font color=blue>Explorando e vetorizando dados textuais</font>"
+        "# Explorando e vetorizando dados textuais"
       ]
     },
     {
@@ -165,7 +165,7 @@
         "colab_type": "text"
       },
       "source": [
-        "##<font color='red'>Quantidade de dados em cada categoria (positiva, negativa)</font>"
+        "##Quantidade de dados em cada categoria (positiva, negativa)"
       ]
     },
     {
@@ -188,7 +188,7 @@
         "colab_type": "text"
       },
       "source": [
-        "##<font color='red'>Vetorizar o texto</font>"
+        "##Vetorizar o texto"
       ]
     },
     {
@@ -214,7 +214,7 @@
         "colab_type": "text"
       },
       "source": [
-        "##<font color='red'>Extrair vocabulário</font>"
+        "##Extrair vocabulário"
       ]
     },
     {
@@ -268,7 +268,7 @@
         "colab_type": "text"
       },
       "source": [
-        "#<font color='blue'>Modelo - Treino, teste, predição, acurácia</font>"
+        "#Modelo - Treino, teste, predição, acurácia"
       ]
     },
     {
@@ -278,7 +278,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## <font color=red>Divisão dos dados em treino e teste</font>"
+        "## Divisão dos dados em treino e teste"
       ]
     },
     {
@@ -303,7 +303,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## <font color=red>Treino do modelo e predição</font>"
+        "## Treino do modelo e predição"
       ]
     },
     {
@@ -330,7 +330,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## <font color=red>Vetor de True e False</font>"
+        "## Vetor de True e False"
       ]
     },
     {
@@ -371,7 +371,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## <font color=red>Acurácia do modelo</font>"
+        "## Acurácia do modelo"
       ]
     },
     {
@@ -396,7 +396,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# <font color=blue>Visualização dos dados - para ter novos insights</font>"
+        "# Visualização dos dados - para ter novos insights</font>"
       ]
     },
     {
@@ -406,7 +406,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## <font color=red>Word Cloud</font>"
+        "## Word Cloud"
       ]
     },
     {
@@ -528,7 +528,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## <font color=red>NLTK</font>"
+        "## NLTK"
       ]
     },
     {
@@ -598,7 +598,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# <font color=blue>Limpeza dos dados</font>"
+        "# Limpeza dos dados"
       ]
     },
     {
@@ -608,7 +608,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## <font color=red>Tratamento 1 - Stopwords</font>"
+        "## Tratamento 1 - Stopwords"
       ]
     },
     {
@@ -770,7 +770,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## <font color=red>Tratamento 2 - Retirar as pontuações</font>"
+        "## Tratamento 2 - Retirar as pontuações"
       ]
     },
     {
@@ -877,7 +877,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## <font color=red>Tratamento 3 - Retirar os acentos</font>"
+        "## Tratamento 3 - Retirar os acentos"
       ]
     },
     {
@@ -941,7 +941,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## <font color=red>Tratamento 4 - Transformar todos os caracteres em minúsculas</font>"
+        "## Tratamento 4 - Transformar todos os caracteres em minúsculas"
       ]
     },
     {
@@ -1029,7 +1029,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## <font color=red>Tratamento 5 - Stemmer.stem - pega a raiz da palavra e retira os sufixos</font>"
+        "## Tratamento 5 - Stemmer.stem - pega a raiz da palavra e retira os sufixos"
       ]
     },
     {
@@ -1078,7 +1078,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## <font color=red>TFIDF</font>"
+        "## TFIDF"
       ]
     },
     {
@@ -1135,7 +1135,8 @@
         "colab_type": "text"
       },
       "source": [
-        "## <font color=red>NGrams</font>\n",
+        "## NGrams\n",
+        "\n",
         "Como a Regressão logística classifica em positivo e negativo"
       ]
     },
