--- a/MachineLearning_PNL.ipynb
+++ b/MachineLearning_PNL.ipynb
@@ -396,7 +396,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# Visualização dos dados - para ter novos insights</font>"
+        "# Visualização dos dados - para ter novos insights\n"
       ]
     },
     {
